# integrity-code-series-week8-creep-fatigue-heater

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  TEST_SUMMARY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: equations.html
src/: __init__.py  config.py  creep_engine.py  creep_fatigue.py  cybersecurity.py  fatigue.py  monte_carlo.py  oxidation.py  surrogate.py  tube_model.py  utils.py
tests/: conftest.py  test_creep.py  test_creep_fatigue.py  test_cybersecurity.py  test_fatigue.py  test_monte_carlo.py  test_oxidation.py  test_surrogate.py  test_tube_model.py  test_visualization.py
