[project]
name = "integrity-code-series-week8-creep-fatigue-heater"
version = "1.0.0"
description = "Coupled creep-fatigue-oxidation life prediction for fired heater tubes (9Cr-1Mo T91)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Felipe Rocha", email = "felipe@olivainternational.com"},
]
keywords = [
    "creep", "fatigue", "oxidation", "fired-heater", "API-530",
    "ASME-III-5", "T91", "integrity", "asset-management",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
]

[project.urls]
Repository = "https://github.com/felipearocha/integrity-code-series-week8-creep-fatigue-heater"
Issues = "https://github.com/felipearocha/integrity-code-series-week8-creep-fatigue-heater/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
